[gd_scene load_steps=4 format=3 uid="uid://dvv5f6ypgmsyh"]

[ext_resource type="Script" path="res://Scene/debug_message.gd" id="1_5eavs"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_urdsx"]
friction = 0.0
bounce = 0.24

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h4rcg"]
radius = 2.0
height = 46.0

[node name="DebugMessage" type="RigidBody2D"]
collision_layer = 0
physics_material_override = SubResource("PhysicsMaterial_urdsx")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_5eavs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(23, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h4rcg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="CollisionShape2D"]
rotation = -1.5708
scale = Vector2(2.3, 0.2)

[node name="RichTextLabel" type="RichTextLabel" parent="CollisionShape2D"]
offset_left = -2.0
offset_top = 22.0
offset_right = 315.0
offset_bottom = 101.0
rotation = -1.5708
scale = Vector2(0.06, 0.06)
theme_override_font_sizes/normal_font_size = 50
text = "Test Debug"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="CollisionShape2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
